# Plugins-Weave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md
EpisodicRAG/: .bandit  .pre-commit-config.yaml  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  CONCEPT.en.md  CONCEPT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Makefile  README.en.md  README.md  _footer.md  pyproject.toml
EpisodicRAG/.claude/: CLAUDE.md  _footer.md
EpisodicRAG/.claude-plugin/: CLAUDE.md  config.template.json  last_digest_times.template.json  plugin.json
EpisodicRAG/agents/: README.md  digest-analyzer.md
EpisodicRAG/commands/: README.md  digest.md
EpisodicRAG/docs/: ADVANCED.md  API_REFERENCE.md  ARCHITECTURE.md  FAQ.md  GLOSSARY.en.md  GLOSSARY.md  GUIDE.md  README.md  TROUBLESHOOTING.md
EpisodicRAG/docs/dev/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_DECISIONS.md  ERROR_RECOVERY_PATTERNS.md  LEARNING_PATH.md
EpisodicRAG/docs/dev/api/: application.md  config.md  domain.md  infrastructure.md  interfaces.md
EpisodicRAG/docs/user/: ADVANCED.md  CHEATSHEET.en.md  CHEATSHEET.md  FAQ.md  GUIDE.md  QUICKSTART.en.md  QUICKSTART.md  TROUBLESHOOTING.md
EpisodicRAG/scripts/: README.md  __version__.py  config.py  digest_times.py  finalize_from_shadow.py  generate_digest_auto.sh  grand_digest.py  save_provisional_digest.py  setup.sh  shadow_grand_digest.py  utils.py
EpisodicRAG/scripts/application/: validators.py
EpisodicRAG/scripts/application/config/: __init__.py  config_builder.py  config_validator.py  level_path_service.py  source_path_resolver.py  threshold_provider.py
EpisodicRAG/scripts/application/finalize/: digest_builder.py  persistence.py  provisional_loader.py  shadow_validator.py
EpisodicRAG/scripts/application/grand/: grand_digest.py  shadow_grand_digest.py
EpisodicRAG/scripts/application/shadow/: cascade_orchestrator.py  cascade_processor.py  file_appender.py  file_detector.py  placeholder_manager.py  provisional_appender.py  shadow_io.py  shadow_updater.py  template.py
EpisodicRAG/scripts/application/tracking/: digest_times.py
EpisodicRAG/scripts/config/: __init__.py  cli.py  config_constants.py  config_loader.py  config_repository.py  config_validator.py  constants.py  directory_validator.py  error_messages.py  exceptions.py  level_path_service.py  path_resolver.py  plugin_root_resolver.py  source_path_resolver.py  threshold_provider.py  types.py
EpisodicRAG/scripts/domain/: __init__.py  constants.py  error_formatter.py  exceptions.py  file_naming.py  level_behaviors.py  level_metadata.py  level_registry.py  text_utils.py  types.py  validation.py  version.py
EpisodicRAG/scripts/domain/config/: __init__.py  config_constants.py  validation.py
EpisodicRAG/scripts/domain/error_formatter/: __init__.py  config_errors.py  digest_errors.py  file_errors.py  registry.py  validation_errors.py
EpisodicRAG/scripts/domain/types/: __init__.py  level.py  level_literals.py
EpisodicRAG/scripts/domain/validators/: __init__.py  digest_validators.py  runtime_checks.py  type_validators.py
EpisodicRAG/scripts/infrastructure/: __init__.py  error_handling.py  file_scanner.py  json_repository.py  logging_config.py  structured_logging.py
EpisodicRAG/scripts/infrastructure/config/: __init__.py  config_loader.py  config_repository.py  error_messages.py  path_resolver.py  path_validators.py  plugin_root_resolver.py
EpisodicRAG/scripts/infrastructure/json_repository/: __init__.py  chained_loader.py  load_strategy.py  operations.py
EpisodicRAG/scripts/interfaces/: __init__.py  cli_helpers.py  config_cli.py  digest_auto.py  digest_config.py  digest_entry.py  digest_readiness.py  digest_setup.py  finalize_from_shadow.py  find_plugin_root.py  interface_helpers.py  save_provisional_digest.py  shadow_state_checker.py  update_digest_times.py
EpisodicRAG/scripts/interfaces/provisional/: __init__.py  file_manager.py  input_loader.py  merger.py  validator.py
EpisodicRAG/scripts/test/: TESTING.md  conftest.py  test_cascade_processor.py  test_config.py  test_constants.py  test_digest_times.py  test_exceptions.py  test_file_appender.py  test_file_naming_properties.py  test_finalize_from_shadow.py  test_grand_digest.py  test_helpers.py  test_interface_helpers.py  test_json_repository_properties.py  test_level_path_service.py  test_logging_config.py  test_save_provisional_digest.py  test_shadow_grand_digest.py  test_shadow_updater.py  test_shadow_validator.py  test_source_path_resolver.py  test_types.py  test_utils.py  test_validators_properties.py
EpisodicRAG/scripts/test/application_tests/: test_cascade_properties.py  test_digest_builder.py  test_digest_times.py
EpisodicRAG/scripts/test/cli_integration_tests/: __init__.py  cli_runner.py  conftest.py  test_digest_auto_cli.py  test_digest_config_cli.py  test_digest_setup_cli.py  test_workflow_cli.py
EpisodicRAG/scripts/test/config_tests/: test_cli.py  test_config.py  test_config_builder.py  test_config_constants.py  test_config_loader.py  test_config_properties.py  test_config_repository.py  test_config_validator.py  test_error_messages.py  test_level_path_service.py  test_path_resolver.py  test_plugin_root_resolver.py  test_setup_message.py  test_source_path_resolver.py  test_threshold_provider.py
EpisodicRAG/scripts/test/domain_tests/: test_constants.py  test_constants_properties.py  test_diagnostic.py  test_digest_validators.py  test_error_formatter.py  test_exceptions.py  test_file_naming.py  test_file_naming_properties.py  test_level_behaviors.py  test_level_literals.py  test_level_metadata.py  test_level_registry.py  test_protocols.py  test_runtime_checks.py  test_types.py  test_validation.py  test_validators_properties.py  (+1 more)
EpisodicRAG/scripts/tests/: __init__.py  test_encoding.py
EpisodicRAG/scripts/tools/: generate_api_docs.py  link_checker.py  validate_json.py
EpisodicRAG/skills/: README.md
EpisodicRAG/skills/digest-auto/: SKILL.md
EpisodicRAG/skills/digest-config/: SKILL.md
EpisodicRAG/skills/digest-setup/: SKILL.md
EpisodicRAG/skills/shared/: _common-concepts.md  _footer.md  _implementation-notes.md
(+69 files in other folders)
