[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "episodicrag"
version = "2.3.0"
description = "EpisodicRAG - Hierarchical digest generation for long-term memory"
requires-python = ">=3.10"

# Runtime dependencies (none - uses Python standard library only)
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["agents*", "skills*", "commands*", "docs*", "data*"]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-cov~=6.0",
    "ruff~=0.11",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "hypothesis~=6.122",
]

[tool.pytest.ini_options]
# テストディレクトリ
testpaths = ["scripts/test"]

# テストファイルのパターン
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# カスタムマーカー
markers = [
    "unit: 単体テスト（高速、外部依存なし）",
    "integration: 統合テスト（ファイルI/O）",
    "slow: 時間のかかるテスト",
    "property: Property-based tests using hypothesis",
    "performance: パフォーマンス・ベンチマークテスト",
]

# デフォルトオプション
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
]

# 非推奨警告を無視
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = [
    "scripts/test/*",
    "*/__pycache__/*",
    "scripts/conftest.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["scripts"]
include = ["scripts/**/*.py"]
exclude = [".pytest_cache", "__pycache__", ".venv", "*.egg-info"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/test/*" = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["domain", "application", "infrastructure", "interfaces", "config"]
known-third-party = ["pytest", "hypothesis"]

# =============================================================================
# Mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.10"
mypy_path = "scripts"
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["scripts/test/"]

# Domain layer: strict mode (already compliant)
[[tool.mypy.overrides]]
module = "domain.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Application layer: enable strict typing for compliant modules
[[tool.mypy.overrides]]
module = [
    "application.validators",
    "application.finalize.digest_builder",
]
disallow_untyped_defs = true

# Config layer: enable strict typing for compliant modules
[[tool.mypy.overrides]]
module = [
    "config.config_repository",
    "config.directory_validator",
]
disallow_untyped_defs = true

# Infrastructure layer: enable strict typing
[[tool.mypy.overrides]]
module = [
    "infrastructure.json_repository",
    "infrastructure.file_scanner",
    "infrastructure.logging_config",
]
disallow_untyped_defs = true

# Interfaces layer: enable strict typing for new modules
[[tool.mypy.overrides]]
module = [
    "interfaces.provisional.*",
]
disallow_untyped_defs = true

# Test layer: excluded via exclude = ["scripts/test/"] in [tool.mypy]
