[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "episodicrag"
version = "3.2.0"
description = "EpisodicRAG - Hierarchical digest generation for long-term memory"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Weave"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies (none - uses Python standard library only)
dependencies = []

[project.urls]
Homepage = "https://github.com/Bizuayeu/Plugins-Weave"
Repository = "https://github.com/Bizuayeu/Plugins-Weave"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["agents*", "skills*", "commands*", "docs*", "data*"]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-cov~=6.0",
    "ruff~=0.11",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "hypothesis~=6.122",
]

[tool.pytest.ini_options]
# テストディレクトリ
testpaths = ["scripts/test"]
# Pythonパス（sys.path.insertの代替）
pythonpath = ["scripts"]

# テストファイルのパターン
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# カスタムマーカー
markers = [
    "unit: 単体テスト（高速、外部依存なし）",
    "integration: 統合テスト（ファイルI/O）",
    "slow: 時間のかかるテスト",
    "property: Property-based tests using hypothesis",
    "performance: パフォーマンス・ベンチマークテスト",
]

# デフォルトオプション
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
]

# 非推奨警告を無視
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["scripts"]
branch = true
omit = [
    "scripts/test/*",
    "*/__pycache__/*",
    "scripts/conftest.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["scripts"]
include = ["scripts/**/*.py"]
exclude = [".pytest_cache", "__pycache__", ".venv", "*.egg-info"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
docstring-code-format = false

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/test/*" = ["E501", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["domain", "application", "infrastructure", "interfaces", "config"]
known-third-party = ["pytest", "hypothesis"]

# =============================================================================
# Mypy Configuration - Strict Mode for 100% Type Coverage
# =============================================================================

[tool.mypy]
python_version = "3.10"
mypy_path = "scripts"

# Strict mode settings (equivalent to --strict flag)
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Allow Any for valid use cases (validation functions, logging)
disallow_any_generics = false

# Import settings
ignore_missing_imports = true

# Exclude test layer (optional: can be enabled later)
exclude = ["scripts/test/"]

# Domain layer: already 100% compliant
[[tool.mypy.overrides]]
module = "domain.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Application layer: 100% type coverage
[[tool.mypy.overrides]]
module = [
    # Package __init__.py files
    "application",
    "application.finalize",
    "application.grand",
    "application.shadow",
    "application.tracking",
    # Individual modules
    "application.validators",
    "application.finalize.digest_builder",
    "application.finalize.shadow_validator",
    "application.finalize.persistence",
    "application.finalize.provisional_loader",
    "application.grand.grand_digest",
    "application.grand.shadow_grand_digest",
    "application.shadow.template",
    "application.shadow.placeholder_manager",
    "application.shadow.file_detector",
    "application.shadow.shadow_io",
    "application.shadow.cascade_processor",
    "application.shadow.shadow_updater",
    "application.shadow.file_appender",
    "application.tracking.digest_times",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Config layer: 100% type coverage
[[tool.mypy.overrides]]
module = [
    "config",
    "config.config_loader",
    "config.config_repository",
    "config.config_validator",
    "config.directory_validator",
    "config.level_path_service",
    "config.path_resolver",
    "config.plugin_root_resolver",
    "config.threshold_provider",
    "config.source_path_resolver",
    "config.cli",
    "config.validation",
    "config.config_constants",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Infrastructure layer: 100% type coverage
[[tool.mypy.overrides]]
module = [
    "infrastructure",
    "infrastructure.json_repository",
    "infrastructure.json_repository.operations",
    "infrastructure.json_repository.load_strategy",
    "infrastructure.json_repository.chained_loader",
    "infrastructure.file_scanner",
    "infrastructure.logging_config",
    "infrastructure.user_interaction",
    "infrastructure.structured_logging",
    "infrastructure.error_handling",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Interfaces layer: 100% type coverage
[[tool.mypy.overrides]]
module = [
    "interfaces",
    "interfaces.provisional",
    "interfaces.provisional.*",
    "interfaces.finalize_from_shadow",
    "interfaces.interface_helpers",
    "interfaces.save_provisional_digest",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Note: Test layer excluded via exclude = ["scripts/test/"]
# To enable strict typing for tests, remove the exclude and add:
# [[tool.mypy.overrides]]
# module = "test.*"
# disallow_untyped_defs = true
